[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gameplay-camera/gameplay_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/cursor/cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/test/ui/ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/terrain/terrain.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/cursor/cursor_5.png" type="Texture" id=6]
[ext_resource path="res://map/test/test.gd" type="Script" id=7]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.647059, 0.839216, 0.945098, 1 )
ground_horizon_color = Color( 0.85098, 0.85098, 0.85098, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="battle-scene" type="Node"]
script = ExtResource( 7 )

[node name="ui" parent="." instance=ExtResource( 4 )]

[node name="marker" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="Sprite3D" type="Sprite3D" parent="marker"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, -1, 0 )
opacity = 0.5
texture = ExtResource( 6 )

[node name="bot_holder" type="Node" parent="."]

[node name="instalation_holder" type="Node" parent="."]

[node name="enemy_decision_timer" type="Timer" parent="."]
autostart = true

[node name="enemy_spawning_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="cursor" parent="." instance=ExtResource( 3 )]
transform = Transform( 5, 0, 0, 0, -2.18557e-07, 1, 0, -5, -4.37114e-08, 0, 0, 0 )

[node name="terrain" parent="." instance=ExtResource( 5 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 20, -20 )
light_energy = 0.3
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="cameraPivot" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 10, 0.1 )

[connection signal="player_on_ready" from="." to="ui" method="_on_battlescene_player_on_ready"]
[connection signal="on_aim_press" from="ui" to="." method="_on_ui_on_aim_press"]
[connection signal="on_respawn_click" from="ui" to="." method="_on_ui_on_respawn_click"]
[connection signal="on_shot_press" from="ui" to="." method="_on_ui_on_shot_press"]
[connection signal="timeout" from="enemy_decision_timer" to="." method="_on_enemy_decision_timer_timeout"]
[connection signal="timeout" from="enemy_spawning_timer" to="." method="_on_enemy_spawning_timer_timeout"]
[connection signal="on_ground_clicked" from="terrain" to="." method="_on_terrain_on_ground_clicked"]
[connection signal="on_body_enter_aim_sight" from="cameraPivot" to="." method="_on_cameraPivot_on_body_enter_aim_sight"]
[connection signal="on_camera_moving" from="cameraPivot" to="." method="_on_cameraPivot_on_camera_moving"]
